# BazaarLog

./: .gitignore  README.md  build.bat
backend/: Cargo.toml  build.rs
backend/.cargo/: config.toml
backend/migrations/: postgres_init.sql  sqlite_init.sql
backend/src/: archive.rs  auth.rs  cache.rs  config.rs  db.rs  error.rs  excel.rs  main.rs  metrics.rs  models.rs  state.rs
backend/src/handlers/: classes.rs  mod.rs  reports.rs  semesters.rs  static_assets.rs  transactions.rs
docs/: api.md  build.md  database.md  performance.md  windows7-run.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  format.ts  index.css  main.tsx  types.ts
frontend/src/components/: AuditPage.tsx  ClassLogin.tsx  Feedback.tsx  ReportPage.tsx  SemesterSwitcher.tsx  TransactionsPage.tsx
